cmake_minimum_required(VERSION 3.0.0)
project(EX1 VERSION 0.1.0)

include(CTest)
enable_testing()

#add_executable(EX1 src/test.cpp src/test_lib.cpp)
#target_include_directories(EX1 PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
add_executable(channel src/channel.cpp)
add_executable(sender src/sender.cpp)
target_link_libraries(channel wsock32 ws2_32)
target_link_libraries(sender wsock32 ws2_32)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
